--- a/views/estimation.pug
+++ b/views/estimation.pug
@@ -19,7 +19,9 @@ main.px-8.font-sans.text-charlotte-blue.pb-5(class='sm:px-20 lg:px-72')
   section.space-y-3.mt-5.font-sans.mb-3(class='xl:px-32')
     block input
   .grid.grid-cols-1.gap-3.justify-items-center(class='md:flex md:flex-row-reverse md:justify-between')
-    a.text-xl.text-gray-500.w-72.bg-gray-600.rounded-full.text-center.py-4.cursor-not-allowed(href="/" type='button' id="estimate-next" disabled)
-      | Next
-    a.text-xl.text-charlotte-blue.w-72.bg-dirty-white.rounded-full.text-center.py-4(href="/" type='button' id="estimate-previous")
-      | Back
+    block pagination
+      a.text-xl.text-gray-500.w-72.bg-gray-600.rounded-full.text-center.py-4.cursor-not-allowed(href="/" type='button' id="estimate-next" disabled)
+        | Next
+      a.text-xl.text-charlotte-blue.w-72.bg-dirty-white.rounded-full.text-center.py-4(href="/" type='button' id="estimate-previous")
+        | Back
+block result
