--- a/views/content/activity-location.pug
+++ b/views/content/activity-location.pug
@@ -25,11 +25,11 @@ block input
         .relative.text-left.flex-grow
             .flex.justify-center.items-center
                 .dropdown.dropdown-top.dropdown-end.capitalize
-                    button#regionBtn.btn-lg.bg-charlotte-gold.w-72.capitalize.text-xl.text-white.rounded-full.outline-none.flex.justify-between.items-center.px-10(tabindex='0' class='md:w-96')
+                    button#regionBtn.btn-lg.bg-charlotte-gold.w-72.capitalize.text-xl.text-white.rounded-full.outline-none.flex.justify-between.items-center.px-10.cursor-pointer(tabindex='0' class='md:w-96')
                         span Select Your Region
                         i.fas.fa-chevron-down
 
                     ul.p-2.shadow.menu.dropdown-content.bg-base-100.rounded-box.w-full(tabindex='0' id='region-list')
                         for regionChoice in data.activityLocation
                             li(class='region-choice')
-                                button.btn.btn-ghost.regions_menu_item.px-4.py-2.text-lg.capitalize(class='hover:bg-dirty-white' role='regions_menu_item' data-code=regionChoice['Code']) #{regionChoice['Region Name']}
+                                button.btn.btn-ghost.regions_menu_item.px-4.py-2.text-lg.capitalize.cursor-pointer(class='hover:bg-dirty-white' role='regions_menu_item' data-code=regionChoice['Code']) #{regionChoice['Region Name']}
