--- a/views/content/room-size.pug
+++ b/views/content/room-size.pug
@@ -24,7 +24,7 @@ block input
         .flex.justify-center.space-x-3
             h1.text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  How large is the room? 
             .dropdown.dropdown-end
-                .btn.btn-circle.btn-ghost.btn-sm.text-info(tabindex='0')
+                .btn.btn-circle.btn-ghost.btn-sm.text-info.cursor-pointer(tabindex='0')
                     i.fas.fa-info-circle.text-charlotte-blue
                 .shadow.card.compact.dropdown-content.bg-base-100.rounded-box.w-52(tabindex='0')
                     .card-body
