--- a/views/content/time-and-people.pug
+++ b/views/content/time-and-people.pug
@@ -24,9 +24,9 @@ block input
                     input#time_input.bg-transparent.ml-3.w-full.text-charlotte-blue.leading-tight(class='focus:outline-none focus:shadow-outline' type='number' placeholder='Input here')
                 .text-charlotte-blue.col-span-1
                     .grid.grid-cols-2.bg-gray-600.rounded-full.p-1
-                        button#hrsBtn.active.bg-dirty-white.rounded-full.py-4.text-charlotte-blue(value='hours' type='button')
+                        button#hrsBtn.active.bg-dirty-white.rounded-full.py-4.text-charlotte-blue.cursor-pointer(value='hours' type='button')
                             | Hours
-                        button#minBtn.inactive.bg-transparent.rounded-full.py-4.text-gray-400(value='minutes' type='button')
+                        button#minBtn.inactive.bg-transparent.rounded-full.py-4.text-gray-400.cursor-pointer(value='minutes' type='button')
                             | Minutes
         .space-y-2.w-72(class='md:w-100')
             .flex.flex-col.text-center
