--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -33,17 +33,17 @@ header(class="px-8 sm:px-20 lg:px-72 font-sans text-charlotte-blue bg-transparen
                      li(class="menu-title")
                          span Navigation
                      li 
-                         a(href="/" class="capitalize")
+                         a(href="/" class="capitalize cursor-pointer")
                              i(class="fas fa-home inline-block w-5 mr-2")
                              | Home
 
                      li
-                         a(href="https://forms.gle/mknhWeSdLcBHNc1m7" class="capitalize")
+                         a(href="https://forms.gle/mknhWeSdLcBHNc1m7" class="capitalize cursor-pointer")
                              i(class="fas fa-poll-h inline-block w-5 mr-2")
                              | Survey 
 
                      li
-                         a(href="/how-to-use" class="capitalize")
+                         a(href="/how-to-use" class="capitalize cursor-pointer")
                              i(class="fas fa-poll-h inline-block w-5 mr-2")
                              | How To Use
 
