Fix Tailwind and Change all.json to all.js Tailwind compilation was too large, now it was fixed from 5mb to a few kilobytes. Also all.json instead of all.js allows us to update the datapoints files without having to change all.json anymore.

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -29,6 +29,10 @@
   clip-path: ellipse(50% 50% at 50% 100%);
 }
 
+.modal-box {
+    max-height: none !important;
+}
+
 @media (min-width: 768px) {
 
   .background-shapes {
