--- a/views/content/activity-planned.pug
+++ b/views/content/activity-planned.pug
@@ -22,7 +22,7 @@ block input
             for activity in data.activityPlanned
                 button.presetBtn.bg-dirty-white.p-1.h-24.w-24.rounded-4xl.font-semibold.place-self-center.shadow-md.transform.transition.duration-300.ease-in-out.text-charlotte-blue.cursor-pointer(data-name=activity['Name'] data-code=activity['Code'] class='md:p-2 xl:p-3 md:h-32 md:w-32 xl:h-40 xl:w-40 md:rounded-7xl focus:bg-beige active:bg-beige hover:bg-gray-300 focus:scale-105 active:scale-105 hover:scale-105 focus:shadow-xl active:shadow-xl hover:shadow-xl')
                     span
-                        img.h-14.w-14.m-auto(class='md:w-16 md:h-16 xl:h-20 xl:w-20' src='/static/images/activity-planned/'+ activity['Image Filename'] alt=activity['Name'])
+                        img.h-14.w-14.m-auto(class='md:w-16 md:h-16 xl:h-20 xl:w-20' src='/static/images/activity-planned/'+ activity['Code'] + '.svg' alt=activity['Name'])
                     span.leading-none.text-sm(class='md:text-normal xl:text-xl') #{activity['Name']}
     a.flex.w-full.text-lg.bg-dirty-white.rounded-full.text-center.font-black.p-4.relative.cursor-pointer(href="/estimate/2.1" type='button')
         span.w-full.text-center.font-charlotte-blue Create Your Own 
