Fix Dropdown on IOS by turning it to Click Events Removed the usage of pseudo-selectors when IOS device is being used, instead classes are added using javascript.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,6 +27,9 @@
 
 #ios-alert svg {
     display: none;
+}
+
+#ios-alert {
     border-radius: 0px 0px 3px 3px !important;
     background-color: #fff457 !important;
 }
