--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -32,9 +32,9 @@ header(class="px-8 sm:px-20 lg:px-72 font-sans text-charlotte-blue bg-transparen
                      | How To Use
 
          div(class="flex-none lg:hidden")
-             div(class="dropdown dropdown-end")
+             div(class="dropdown dropdown-end" id="mobile-nav")
 
-                 div(tabindex="0" class="m-1 btn btn-square btn-ghost")
+                 button(tabindex="0" class="m-1 btn btn-square btn-ghost")
                      svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-6 h-6 stroke-current")
                        path(stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16")
 
