--- a/views/index.pug
+++ b/views/index.pug
@@ -23,6 +23,7 @@ html
         link(rel="stylesheet" href="/static/libraries/css/tailwind.css")
         link(rel="stylesheet" href="/static/libraries/css/loader.css")
         link(rel="stylesheet" href="/static/css/index.css")
+        link(rel="stylesheet" href="/static/css/ios.css")
 
         link(
             rel="stylesheet"
@@ -62,3 +63,4 @@ html
             img.lds-heart(src='/static/images/loader.png')
 
         script(src="/static/js/index.js" type="text/javascript")
+        script(src="/static/js/navigation.js" type="text/javascript")
