--- a/views/content/masks.pug
+++ b/views/content/masks.pug
@@ -16,7 +16,7 @@ block progress-bar
 block input
     .flex.justify-evenly
         .space-y-10.flex-col.justify-evenly.items-center(class='lg:py-28')
-            .space-y-2.m-b.w-72(class='md:w-100')
+            .space-y-2.m-b(class='md:w-100')
                 .flex-col.text-center
                     h1.text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  Estimate the percentage of people wearing masks:
                 .flex-col
@@ -28,7 +28,7 @@ block input
             .space-y-2.flex-col.flex
                 .flex-col.justify-center.space-x-3
                     h1.text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  What type of mask?
-                .flex-col.text-center.justify-center.space-y-3.px-0(class='md:px-20 lg:px-0')
+                .flex-col.text-center.justify-center.space-y-3(class='lg:px-0')
                     .grid.grid-cols-3.gap-x-6.gap-y-2.text-charlotte-blue.h-full(class='md:gap-x-3 md:gap-y-1')
                         for mask in data.maskTypes
                             button.maskBtn.bg-dirty-white.p-1.h-24.w-24.rounded-4xl.font-semibold.place-self-center.shadow-md.transform.transition.duration-300.ease-in-out.text-charlotte-blue.cursor-pointer(data-name=mask['Name'] data-code=mask['Code'] class='md:p-2 xl:p-3 md:h-32 md:w-32 xl:h-40 xl:w-40 md:rounded-7xl focus:bg-beige active:bg-beige hover:bg-gray-300 focus:scale-105 active:scale-105 hover:scale-105 focus:shadow-xl active:shadow-xl hover:shadow-xl')
