--- a/views/content/room-ventilation.pug
+++ b/views/content/room-ventilation.pug
@@ -21,23 +21,23 @@ block progress-bar-after
 
 block input
     section.space-y-3.px-0.font-sans
-        .flex.justify-center.space-x-3
-            h1.text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  What is the location&apos;s category? 
-            .dropdown.dropdown-end
-                .btn.btn-circle.btn-ghost.btn-sm.text-info.cursor-pointer(tabindex='0')
-                    i.fas.fa-info-circle.text-charlotte-blue
-                .shadow.card.compact.dropdown-content.bg-base-100.rounded-box.w-52(tabindex='0')
-                    .card-body
-                        p If you think your preferred activity is not located in the given places, kindly choose the similar location.
-                        ul.p-2
-                            li  1. Residential House 
-                            li  2. Office Building 
-                            li  3. Shopping Space 
-                            li  4. Educational Facility 
-                            li  5. Recreational Facility 
-                            li  6. Public Assembly Space 
-        .flex.flex-col.text-center.my-3.justify-center.space-y-3.px-0(class='md:h-136 md:px-20 lg:px-0')
-            .grid.grid-cols-3.gap-x-6.gap-y-2.text-charlotte-blue.h-full(class='md:gap-x-3 md:gap-y-1')
+        .text-center.space-x-3
+            .text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  What is the location&apos;s category? 
+                .inline.dropdown.dropdown-end
+                    .btn.btn-circle.btn-ghost.btn-sm.text-info.cursor-pointer(tabindex='0')
+                        i.fas.fa-info-circle.text-charlotte-blue
+                    .shadow.card.compact.dropdown-content.bg-base-100.rounded-box.w-52(tabindex='0')
+                        .card-body.font-normal
+                            p If you think your preferred activity is not located in the given places, kindly choose the similar location.
+                            ul.p-2
+                                li  1. Residential House 
+                                li  2. Office Building 
+                                li  3. Shopping Space 
+                                li  4. Educational Facility 
+                                li  5. Recreational Facility 
+                                li  6. Public Assembly Space 
+        .text-center.my-3.justify-center.space-y-3.px-0(class='max-h-10 md:h-136 md:px-20 lg:px-0')
+            .grid.grid-cols-3.gap-x-6.gap-y-2.text-charlotte-blue(class='sm:h-136 md:h-full md:gap-x-3 md:gap-y-1')
                 for ventilation in data.ventilationRates
                     if ventilation['Use In Custom']
                         button.presetBtn.bg-dirty-white.p-1.h-24.w-24.rounded-4xl.font-semibold.place-self-center.shadow-md.transform.transition.duration-300.ease-in-out.text-charlotte-blue(name='preset' class='md:p-2 xl:p-3 md:h-32 md:w-32 xl:h-40 xl:w-40 md:rounded-7xl focus:bg-beige active:bg-beige hover:bg-gray-300 focus:scale-105 active:scale-105 hover:scale-105 focus:shadow-xl active:shadow-xl hover:shadow-xl' data-name=ventilation['Name'] data-code=ventilation['Code'])
