--- a/views/content/activity-planned.pug
+++ b/views/content/activity-planned.pug
@@ -18,7 +18,7 @@ block input
         .text-center.space-x-3
             h1.text-charlotte-blue.text-lg.font-black.tracking-normal(class='md:text-xl xl:text-2xl')  What is the planned activity? 
     .text-center.my-3.justify-center.space-y-3.px-0(class='sm:h-136 md:h-136 md:px-20 lg:px-0')
-        .grid.grid-cols-3.gap-x-6.gap-y-2.text-charlotte-blue.h-full(class='md:gap-x-3 md:gap-y-1')
+        .grid.grid-cols-3.gap-x-6.gap-y-2.text-charlotte-blue(class='sm:h-max-5 md:max-h-full md:h-full md:gap-x-3 md:gap-y-1')
             for activity in data.activityPlanned
                 button.presetBtn.bg-dirty-white.p-1.h-24.w-24.rounded-4xl.font-semibold.place-self-center.shadow-md.transform.transition.duration-300.ease-in-out.text-charlotte-blue.cursor-pointer(data-name=activity['Name'] data-code=activity['Code'] class='md:p-2 xl:p-3 md:h-32 md:w-32 xl:h-40 xl:w-40 md:rounded-7xl focus:bg-beige active:bg-beige hover:bg-gray-300 focus:scale-105 active:scale-105 hover:scale-105 focus:shadow-xl active:shadow-xl hover:shadow-xl')
                     span
