--- a/views/content/activity-level.pug
+++ b/views/content/activity-level.pug
@@ -35,9 +35,9 @@ block input
             .relative.w-full.carousel-item(id='slide' + index)
                 .flex.justify-center.p-5.w-full(class='lg:py-6 lg:px-20')
                     .card.shadow-lg
-                        figure.pb-0(class='md:h-80')
+                        figure.pb-0(class='sm:max-h-80 md:h-80')
                             img.h-full.w-full(src='/static/images/activity-level/' + level['Name'] + '.svg' alt=level['Name'])
-                        .card-body.flex.flex-col.justify-center.pt-0.mt-0
+                        .card-body.pt-0.mt-0
                             h2.card-title.text-3xl #{level['Name']}
                             p #{level['Desc']}
                             .card-actions.py-4.flex.flex-col.mt-0.pt-0
