--- a/views/content/activity-level.pug
+++ b/views/content/activity-level.pug
@@ -33,10 +33,10 @@ block input
     .w-full.carousel
         each level, index in data.activityLevels
             .relative.w-full.carousel-item(id='slide' + index)
-                .flex.justify-center.p-5.w-full(class='lg:py-6 lg:px-20')
+                .p-5.w-full(class='lg:py-6 lg:px-20')
                     .card.shadow-lg
-                        figure.pb-0(class='sm:max-h-80 md:h-80')
-                            img.w-full(class='md:h-full' src='/static/images/activity-level/' + level['Name'] + '.svg' alt=level['Name'])
+                        figure.p-0.m-0(class='sm:max-h-80 md:h-80')
+                            img.p-0.m-0.w-full(class='md:h-full' src='/static/images/activity-level/' + level['Name'] + '.svg' alt=level['Name'])
                         .card-body.pt-0.mt-0
                             h2.card-title.text-3xl #{level['Name']}
                             p #{level['Desc']}
