Fix Anchor Buttons Styling I guess they're fixed. Their class name is link-btn.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,8 +28,11 @@
 }
 
 /* Remove default appearance for IOS */
-a.btn {
-    -webkit-appearance: none !important;
+a.link-btn {
+    -moz-appearance: button;
+    -webkit-appearance: button;
+    appearance: button;
+    text-decoration: none;
 }
 
 /* This is the zoom hack */
