--- a/views/estimation.pug
+++ b/views/estimation.pug
@@ -21,9 +21,9 @@ main.px-8.font-sans.text-charlotte-blue.pb-5(class='sm:px-20 lg:px-72')
     block input
   .grid.grid-cols-1.gap-3.justify-items-center(class='md:flex md:flex-row-reverse md:justify-between')
     block pagination
-      a.text-xl.text-gray-500.w-72.bg-gray-600.rounded-full.text-center.py-4.cursor-not-allowed(href="/" type='button' id="estimate-next" disabled)
+      a.link-btn.text-xl.text-gray-500.w-72.bg-gray-600.rounded-full.text-center.py-4.cursor-not-allowed(href="/" id="estimate-next" disabled)
         | Next
 
-      a.text-xl.text-charlotte-blue.w-72.bg-dirty-white.rounded-full.text-center.py-4(href="/" type='button' id="estimate-previous")
+      a.link-btn.text-xl.text-charlotte-blue.w-72.bg-dirty-white.rounded-full.text-center.py-4(href="/" id="estimate-previous")
         | Back
 block result
