Change CSS Property Appearance Hopefully none, does as expected.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -29,9 +29,9 @@
 
 /* Remove default appearance for IOS */
 a.link-btn {
-    -moz-appearance: button;
-    -webkit-appearance: button;
-    appearance: button;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
     text-decoration: none;
 }
 
