Add Language Translation Change language by setting Local Storage key language to either "filipino" or "english".

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -35,6 +35,14 @@ a.link-btn {
     text-decoration: none;
 }
 
+.english-text, .filipino-text {
+  display: none;
+}
+
+.english-text.is-active, .filipino-text.is-active {
+  display: unset;
+}
+
 /* This is the zoom hack */
 html {
     zoom: 100%;
